js mapping things

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,13 +1,15 @@
 {
     "coc.preferences.formatOnSaveFiletypes": ["css"],
+
     "suggest.noselect": true,
     "suggest.enablePreselect": false,
 
+    "colors.filetypes": ["*"],
     "pairs.enableCharacters": ["(", "[", "{", "<", "\"", "'", "`"],
+
     "diagnostic.checkCurrentLine": true,
     "diagnostic.warningSign": ">>",
     "diagnostic.refreshOnInsertMode": true,
-    "colors.filetypes": ["*"],
     // "diagnostic.displayByAle": false,
 
     // "prettier.arrowParens": "always",
@@ -32,83 +34,86 @@
     "eslint.autoFixOnSave": false,
 
     "cSpell.userWords": [
-      "Alacritty",
-      "Autoload",
-      "CLASSNAME",
-      "Consolas",
-      "Dropzone",
-      "Fastify",
-      "Flippable",
-      "Gifs",
-      "ISBNs",
-      "Knopfler",
-      "Knowt",
-      "Knowt's",
-      "Mixpanel",
-      "Modelica",
-      "Objs",
-      "PDFs",
-      "PPTs",
-      "Photoshop",
-      "Quizlet",
-      "Roboto",
-      "Strikethrough",
-      "Swipeable",
-      "Tahoma",
-      "Unauth",
-      "Unstyled",
-      "Verdana",
-      "Walkthrough",
-      "Zwitterion",
-      "aliceblue",
-      "ascendingly",
-      "birthdate",
-      "blueviolet",
-      "btns",
-      "callsign",
-      "couchbase",
-      "crossorigin",
-      "curr",
-      "cytoskeleton",
-      "cytosol",
-      "darkcyan",
-      "dickbutt",
-      "encodable",
-      "firestore",
-      "flexbox",
-      "gruvbox",
-      "krehwell",
-      "lightgray",
-      "lightgreen",
-      "macbook",
-      "middlewares",
-      "minmax",
-      "moar",
-      "mygroup",
-      "nextjs",
-      "nmap",
-      "noindex",
-      "noopener",
-      "noreferrer",
-      "nums",
-      "overscroll",
-      "palegoldenrod",
-      "palegreen",
-      "paleturquoise",
-      "palevioletred",
-      "perim",
-      "signin",
-      "signup",
-      "skyblue",
-      "spacebar",
-      "spacetime",
-      "suza",
-      "typebox",
-      "upsert",
-      "uuidv",
-      "vals",
-      "yakuza",
-      "youtube",
-      "yuza"
+        "Alacritty",
+        "Autoload",
+        "CLASSNAME",
+        "Consolas",
+        "Dropzone",
+        "Fastify",
+        "Flippable",
+        "Gifs",
+        "ISBNs",
+        "Knopfler",
+        "Knowt",
+        "Knowt's",
+        "Mixpanel",
+        "Modelica",
+        "Objs",
+        "PDFs",
+        "PPTs",
+        "Photoshop",
+        "Quizlet",
+        "Roboto",
+        "Strikethrough",
+        "Swipeable",
+        "Tahoma",
+        "Unauth",
+        "Unstyled",
+        "Verdana",
+        "Walkthrough",
+        "Zwitterion",
+        "aliceblue",
+        "ascendingly",
+        "birthdate",
+        "blueviolet",
+        "btns",
+        "callsign",
+        "checkmark",
+        "couchbase",
+        "crossorigin",
+        "curr",
+        "cytoskeleton",
+        "cytosol",
+        "darkcyan",
+        "dbname",
+        "dickbutt",
+        "encodable",
+        "firestore",
+        "flexbox",
+        "gruvbox",
+        "krehwell",
+        "lightgray",
+        "lightgreen",
+        "macbook",
+        "middlewares",
+        "minmax",
+        "moar",
+        "mygroup",
+        "nextjs",
+        "nmap",
+        "noindex",
+        "noopener",
+        "noreferrer",
+        "nums",
+        "overscroll",
+        "palegoldenrod",
+        "palegreen",
+        "paleturquoise",
+        "palevioletred",
+        "perim",
+        "psql",
+        "signin",
+        "signup",
+        "skyblue",
+        "spacebar",
+        "spacetime",
+        "suza",
+        "typebox",
+        "upsert",
+        "uuidv",
+        "vals",
+        "yakuza",
+        "youtube",
+        "yuza"
     ]
-  }
+}
