--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,109 +1,109 @@
 window.opacity: 1
 colors:
-  bright:
-    black: '#696969'
-    blue: '#696969'
-    cyan: '#696969'
-    green: '#696969'
-    magenta: '#696969'
-    red: '#696969'
-    white: '#F1F1F1'
-    yellow: '#696969'
-  normal:
-    black: '#212121'
-    blue: '#696969'
-    cyan: '#696969'
-    green: '#5FD7A7'
-    magenta: '#696969'
-    red: '#E32791'
-    white: '#696969'
-    yellow: '#F3E430'
-  primary:
-    background: '#161B1A'
-    foreground: '#F1F1F1'
+    bright:
+        black: "#696969"
+        blue: "#696969"
+        cyan: "#696969"
+        green: "#696969"
+        magenta: "#696969"
+        red: "#696969"
+        white: "#F1F1F1"
+        yellow: "#696969"
+    normal:
+        black: "#212121"
+        blue: "#696969"
+        cyan: "#696969"
+        green: "#5FD7A7"
+        magenta: "#696969"
+        red: "#E32791"
+        white: "#696969"
+        yellow: "#F3E430"
+    primary:
+        background: "#161B1A"
+        foreground: "#F1F1F1"
 draw_bold_text_with_bright_colors: false
 env:
-  TERM: xterm-256color
+    TERM: xterm-256color
 font:
-  bold:
-    family: Consolas NF
-    style: Bold
-  bold_italic:
-    family: Consolas NF
-    style: Bold Italic
-  italic:
-    family: Consolas NF
-    style: Italic
-  normal:
-    family: Material Regular
-    style: Regular
-  offset:
-    x: 0
-    y: 1
-  size: 11.5
+    bold:
+        family: Consolas NF
+        style: Bold
+    bold_italic:
+        family: Consolas NF
+        style: Bold Italic
+    italic:
+        family: Consolas NF
+        style: Italic
+    normal:
+        family: Consolas NF
+        style: Regular
+    offset:
+        x: 0
+        y: 1
+    size: 11.5
 key_bindings:
-- action: Paste
-  key: V
-  mods: Control|Shift
-- action: Copy
-  key: C
-  mods: Control|Shift
-- action: PasteSelection
-  key: Insert
-  mods: Shift
-- action: ResetFontSize
-  key: Key0
-  mods: Control
-- action: none
-  key: Equals
-  mods: Control
-- action: IncreaseFontSize
-  key: Plus
-  mods: Control|Shift
-- action: DecreaseFontSize
-  key: Minus
-  mods: Control
-- action: DecreaseFontSize
-  key: Minus
-  mods: Control
-- action: Paste
-  key: Paste
-- action: Copy
-  key: Copy
-- action: ClearLogNotice
-  key: L
-  mods: Control
-- chars: "\f"
-  key: L
-  mods: Control
-- action: ScrollPageUp
-  key: PageUp
-  mode: ~Alt
-  mods: Shift
-- action: ScrollPageDown
-  key: PageDown
-  mode: ~Alt
-  mods: Shift
-- action: ScrollToTop
-  key: Home
-  mode: ~Alt
-  mods: Shift
-- action: ScrollToBottom
-  key: End
-  mode: ~Alt
-  mods: Shift
+    - action: Paste
+      key: V
+      mods: Control|Shift
+    - action: Copy
+      key: C
+      mods: Control|Shift
+    - action: PasteSelection
+      key: Insert
+      mods: Shift
+    - action: ResetFontSize
+      key: Key0
+      mods: Control
+    - action: none
+      key: Equals
+      mods: Control
+    - action: IncreaseFontSize
+      key: Plus
+      mods: Control|Shift
+    - action: DecreaseFontSize
+      key: Minus
+      mods: Control
+    - action: DecreaseFontSize
+      key: Minus
+      mods: Control
+    - action: Paste
+      key: Paste
+    - action: Copy
+      key: Copy
+    - action: ClearLogNotice
+      key: L
+      mods: Control
+    - chars: "\f"
+      key: L
+      mods: Control
+    - action: ScrollPageUp
+      key: PageUp
+      mode: ~Alt
+      mods: Shift
+    - action: ScrollPageDown
+      key: PageDown
+      mode: ~Alt
+      mods: Shift
+    - action: ScrollToTop
+      key: Home
+      mode: ~Alt
+      mods: Shift
+    - action: ScrollToBottom
+      key: End
+      mode: ~Alt
+      mods: Shift
 mouse_bindings:
-- action: Copy
-  mouse: Middle
+    - action: Copy
+      mouse: Middle
 scrolling:
-  history: 1000
+    history: 1000
 selection:
-  save_to_clipboard: true
+    save_to_clipboard: true
 window:
-  class:
-    general: Alacritty
-    instance: Alacritty
-  padding:
-    x: 8
-    y: 0
-  title: Alacritty
+    class:
+        general: Alacritty
+        instance: Alacritty
+    padding:
+        x: 8
+        y: 0
+    title: Alacritty
