--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -54,74 +54,75 @@
     "eslint.autoFixOnSave": false,
 
     "cSpell.userWords": [
-        "Alacritty",
-        "Autoload",
-        "CLASSNAME",
-        "Consolas",
-        "Dropzone",
-        "Fastify",
-        "Flippable",
-        "Gifs",
-        "ISBNs",
-        "Knopfler",
-        "Knowt",
-        "Knowt's",
-        "Mixpanel",
-        "Modelica",
-        "Objs",
-        "PDFs",
-        "PPTs",
-        "Photoshop",
-        "Quizlet",
-        "Roboto",
-        "Strikethrough",
-        "Swipeable",
-        "Tahoma",
-        "Unauth",
-        "Unstyled",
-        "Verdana",
-        "Walkthrough",
-        "Zwitterion",
-        "ascendingly",
-        "birthdate",
-        "btns",
-        "callsign",
-        "checkmark",
-        "couchbase",
-        "crossorigin",
-        "curr",
-        "cytoskeleton",
-        "cytosol",
-        "dbname",
-        "dickbutt",
-        "encodable",
-        "firestore",
-        "flexbox",
-        "gorm",
-        "gruvbox",
-        "krehwell",
-        "macbook",
-        "middlewares",
-        "minmax",
-        "moar",
-        "mygroup",
-        "nextjs",
-        "nmap",
-        "noindex",
-        "noopener",
-        "noreferrer",
-        "overscroll",
-        "psql",
-        "signin",
-        "signup",
-        "spacebar",
-        "spacetime",
-        "suza",
-        "typebox",
-        "upsert",
-        "uuidv",
-        "yakuza",
-        "youtube",
-        "yuza"
+      "Alacritty",
+      "Autoload",
+      "CLASSNAME",
+      "Consolas",
+      "Dropzone",
+      "Fastify",
+      "Flippable",
+      "Gifs",
+      "ISBNs",
+      "Knopfler",
+      "Knowt",
+      "Knowt's",
+      "Mixpanel",
+      "Modelica",
+      "Objs",
+      "PDFs",
+      "PPTs",
+      "Photoshop",
+      "Quizlet",
+      "Roboto",
+      "Strikethrough",
+      "Swipeable",
+      "Tahoma",
+      "Unauth",
+      "Unstyled",
+      "Verdana",
+      "Walkthrough",
+      "Zwitterion",
+      "ascendingly",
+      "birthdate",
+      "btns",
+      "callsign",
+      "checkmark",
+      "couchbase",
+      "crossorigin",
+      "curr",
+      "cytoskeleton",
+      "cytosol",
+      "dbname",
+      "deduping",
+      "dickbutt",
+      "encodable",
+      "firestore",
+      "flexbox",
+      "gorm",
+      "gruvbox",
+      "krehwell",
+      "macbook",
+      "middlewares",
+      "minmax",
+      "moar",
+      "mygroup",
+      "nextjs",
+      "nmap",
+      "noindex",
+      "noopener",
+      "noreferrer",
+      "overscroll",
+      "psql",
+      "signin",
+      "signup",
+      "spacebar",
+      "spacetime",
+      "suza",
+      "typebox",
+      "upsert",
+      "uuidv",
+      "yakuza",
+      "youtube",
+      "yuza"
     ]
 }
