--- a/.config/i3/config
+++ b/.config/i3/config
@@ -70,6 +70,7 @@ for_window [class="Nitrogen"] floating enable
 for_window [class="Eog"] floating enable
 for_window [class="SimpleScreenRecorder"] floating enable
 for_window [class="org.gnome.Character"] floating enable
+for_window [class="Blueman-manager"] floating enable
 
 
 # ----- MONITOR -----
