--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -48,77 +48,86 @@
     "eslint.enable": true,
     "eslint.autoFixOnSave": false,
 
+    "cSpell.ignorePaths": [
+        "node_modules", // this will ignore anything the node_modules directory
+        "**/node_modules", // the same for this one
+        "**/node_modules/**", // the same for this one
+        "node_modules/**", // Doesn't currently work due to how the current working directory is determined.
+        ".git", // Ignore the .git directory
+        "*.dll", // Ignore all .dll files.
+        "**/*.dll" // Ignore all .dll files
+    ],
     "cSpell.userWords": [
-      "Alacritty",
-      "Autoload",
-      "CLASSNAME",
-      "Consolas",
-      "Dropzone",
-      "Fastify",
-      "Flippable",
-      "Gifs",
-      "ISBNs",
-      "Knopfler",
-      "Knowt",
-      "Knowt's",
-      "Kubernetes",
-      "Mixpanel",
-      "Modelica",
-      "Objs",
-      "PDFs",
-      "PPTs",
-      "Photoshop",
-      "Quizlet",
-      "Roboto",
-      "Strikethrough",
-      "Swipeable",
-      "Tahoma",
-      "Unauth",
-      "Unstyled",
-      "Verdana",
-      "Walkthrough",
-      "Zwitterion",
-      "ascendingly",
-      "birthdate",
-      "btns",
-      "callsign",
-      "checkmark",
-      "couchbase",
-      "crossorigin",
-      "curr",
-      "cytoskeleton",
-      "cytosol",
-      "dbname",
-      "deduping",
-      "dickbutt",
-      "encodable",
-      "firestore",
-      "flexbox",
-      "gorm",
-      "gruvbox",
-      "krehwell",
-      "macbook",
-      "middlewares",
-      "minmax",
-      "moar",
-      "mygroup",
-      "nextjs",
-      "nmap",
-      "noindex",
-      "noopener",
-      "noreferrer",
-      "overscroll",
-      "psql",
-      "signin",
-      "signup",
-      "spacebar",
-      "spacetime",
-      "suza",
-      "typebox",
-      "upsert",
-      "uuidv",
-      "yakuza",
-      "youtube",
-      "yuza"
+        "Alacritty",
+        "Autoload",
+        "CLASSNAME",
+        "Consolas",
+        "Dropzone",
+        "Fastify",
+        "Flippable",
+        "Gifs",
+        "ISBNs",
+        "Knopfler",
+        "Knowt",
+        "Knowt's",
+        "Kubernetes",
+        "Mixpanel",
+        "Modelica",
+        "Objs",
+        "PDFs",
+        "PPTs",
+        "Photoshop",
+        "Quizlet",
+        "Roboto",
+        "Strikethrough",
+        "Swipeable",
+        "Tahoma",
+        "Unauth",
+        "Unstyled",
+        "Verdana",
+        "Walkthrough",
+        "Zwitterion",
+        "ascendingly",
+        "birthdate",
+        "btns",
+        "callsign",
+        "checkmark",
+        "couchbase",
+        "crossorigin",
+        "curr",
+        "cytoskeleton",
+        "cytosol",
+        "dbname",
+        "deduping",
+        "dickbutt",
+        "encodable",
+        "firestore",
+        "flexbox",
+        "gorm",
+        "gruvbox",
+        "krehwell",
+        "macbook",
+        "middlewares",
+        "minmax",
+        "moar",
+        "mygroup",
+        "nextjs",
+        "nmap",
+        "noindex",
+        "noopener",
+        "noreferrer",
+        "overscroll",
+        "psql",
+        "signin",
+        "signup",
+        "spacebar",
+        "spacetime",
+        "suza",
+        "typebox",
+        "upsert",
+        "uuidv",
+        "yakuza",
+        "youtube",
+        "yuza"
     ]
 }
