--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -21,6 +21,7 @@ colors:
     primary:
         background: "#161B1A"
         foreground: "#F1F1F1"
+draw_bold_text_with_bright_colors: false
 env:
     TERM: xterm-256color
 font:
@@ -40,7 +41,6 @@ font:
         x: 0
         y: 1
     size: 11.5
-draw_bold_text_with_bright_colors: true
 key_bindings:
     - action: ResetFontSize
       key: Key0
