--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -36,11 +36,11 @@ font:
         style: Italic
     normal:
         family: Consolas NF
-        style: Regular
+        # style: Regular
     offset:
         x: 0
         y: 1
-    size: 11.5
+    size: 14.5
 key_bindings:
     - action: ResetFontSize
       key: Key0
@@ -60,6 +60,8 @@ key_bindings:
       key: Copy
 scrolling:
     history: 1000
+shell:
+  program: /opt/homebrew/bin/fish
 selection:
     save_to_clipboard: true
 window:
