--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 # ----- TMUX BEHAVIOUR ------
 set -g history-limit 10000
 set-option -g history-limit 10000
-set -g default-terminal "tmux-256color"
+set -g default-terminal screen-256color
 
 
 # ----- ALLOW COLOR FOR TMUX -----
