support option+Q alacritty and fish var for node@16

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -58,10 +58,12 @@ key_bindings:
     key: Paste
   - action: Copy
     key: Copy
-  - { key: Key6, mods: Control, chars: "\x1e" }
-  - { key: L, mods: Alt, chars: "\x1bl" }
-  - { key: LBracket, mods: Alt, chars: "\x1b[" }
-  - { key: RBracket, mods: Alt, chars: "\x1b]" }
+  - { key: Key6,     mods: Control, chars: "\x1e" }
+  - { key: L,        mods: Alt,     chars: "\x1bl" }
+  - { key: LBracket, mods: Alt,     chars: "\x1b[" }
+  - { key: RBracket, mods: Alt,     chars: "\x1b]" }
+  - { key: RBracket, mods: Alt,     chars: "\x1b]" }
+  - { key: Q,        mods: Alt,     chars: "\x1bq" }
 scrolling:
   history: 1000
 shell:
