--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,26 +1,13 @@
 window.opacity: 1
 colors:
-  bright:
-    black: "#696969"
-    blue: "#696969"
-    cyan: "#696969"
-    green: "#696969"
-    magenta: "#696969"
-    red: "#696969"
-    white: "#F1F1F1"
-    yellow: "#696969"
   normal:
-    black: "#212121"
-    blue: "#696969"
-    cyan: "#696969"
     green: "#5FD7A7"
-    magenta: "#696969"
     red: "#E32791"
-    white: "#696969"
+    white: "#F1F1F1"
     yellow: "#F3E430"
   primary:
     background: "#161B1A"
-    foreground: "#F1F1F1"
+    foreground: "#c6c6c6"
 draw_bold_text_with_bright_colors: false
 env:
   TERM: xterm-256color
@@ -36,11 +23,11 @@ font:
     style: Italic
   normal:
     family: Consolas NF
-    # style: Regular
   offset:
     x: 0
     y: 1
   size: 14.5
+  builtin_box_drawing: true
 key_bindings:
   - action: ResetFontSize
     key: Key0
@@ -153,3 +140,4 @@ window:
     x: 0
     y: 0
   title: Alacritty
+  decoration: buttonless
