--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,21 +1,10 @@
-# ----- TMUX BEHAVIOUR ------
-set -g history-limit 10000
-set-option -g history-limit 10000
-set -g default-terminal screen-256color
-
-
-# ----- ALLOW COLOR FOR TMUX -----
-set-option -ga terminal-overrides ",xterm-256color:Tc"
-set -sg escape-time 0
-
-
-# ----- SET NEW WINDOW TO PATH FROM PREVIOUS WINDOW -----
+# ----- SET NEW WINDOW INITIAL PATH BASED FROM CURRENT WINDOW -----
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
 
-# ----- BIND FOR MOVING-WINDOW | if use <prefix-j> it will bind + key at the same time -----
+# ----- BIND FOR MOVING-WINDOW
 bind-key k swap-window -t -1\; select-window -t -1
 bind-key j swap-window -t +1\; select-window -t +1
 
@@ -23,45 +12,10 @@ bind-key j swap-window -t +1\; select-window -t +1
 # ----- MOUSE CONFIGURATION -----
 set -g mouse on
 setw -g mode-keys vi
-# ----- SYSTEM CLIPBOARD COPY -----
 set -s set-clipboard on
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi Escape send-keys -X cancel
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "/mnt/c/Windows/System32/clip.exe"
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "/mnt/c/Windows/System32/clip.exe"
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "/mnt/c/Windows/System32/clip.exe"
-
-
-# ----- VIM STATUS TMUX ------
-set -g focus-events on
-set -g status-bg default
-set -g status-right '#(cat #{socket_path}-\#{session_id}-vimbridge)'
-set -g status-right-length 120
-set -g status-interval 0
 
 
 # ----- THE BAR BELOW CONFIGURATION ----
-set -g status-bg "#161B1A" #colour234
-set -g status-fg colour249
-# set -g status-justify 'left'
-# set -g status-position bottom
-# set -g status-left '#H/#S'
-# set -g status-left-length 20
-# set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
-# set -g status-right-length 50
-setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
-setw -g window-status-format ' #I#[fg=colour247]:#[fg=colour247]#W#[fg=colour247]#F '
-
-
-# ----- NVIM LSP-COLOR -----
-# Undercurl
-# set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
-# set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
-
-
-# ----- LIST OF PLUGINS -----
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @resurrect-strategy-nvim 'session'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+set-option -g status-style bg=default
+set-option -g status-style fg=colour249
+set-option -g status-right "#{?window_bigger,[#{window_offset_x}#,#{window_offset_y}] ,}\"#{=21:pane_title}\""
