--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,6 +23,7 @@ set -s set-clipboard on
 # ----- THE BAR BELOW CONFIGURATION ----
 set-option -g status-style bg=default
 set-option -g status-style fg=colour249
-set-option -g status-right "#{?window_bigger,[#{window_offset_x}#,#{window_offset_y}] ,}\"#{=40:pane_title}\""
+set-option -g status-left-length 100
+set-option -g status-right-length 100
 setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F'
 setw -g window-status-format ' #I#[fg=colour247]:#[fg=colour247]#W#[fg=colour247]#F'
