tmux dont reset scroll upon copy please

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,12 +18,14 @@ bind-key j swap-window -t +1\; select-window -t +1
 set -g mouse on
 setw -g mode-keys vi
 set -s set-clipboard on
+unbind -T copy-mode-vi MouseDragEnd1Pane
 
 
 # ----- THE BAR BELOW CONFIGURATION ----
 set-option -g status-style bg=default
 set-option -g status-style fg=colour249
 set-option -g status-left-length 100
-set-option -g status-right-length 100
+# set-option -g status-right-length 100
+set-option -g status-right "#{?window_bigger,[#{window_offset_x}#,#{window_offset_y}] ,}\"#{=50:pane_title}\""
 setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F'
 setw -g window-status-format ' #I#[fg=colour247]:#[fg=colour247]#W#[fg=colour247]#F'
