--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,7 @@ set -g history-limit 10000
 # ----- prevent delay for vim `Ctrl + [` -----
 set -sg escape-time 0
 
+
 # ----- SET NEW WINDOW INITIAL PATH BASED FROM CURRENT WINDOW -----
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
@@ -10,15 +11,20 @@ bind c new-window -c "#{pane_current_path}"
 
 
 # ----- BIND FOR MOVING-WINDOW
+bind-key i run-shell "tmux neww ~/utils/cht.sh/main"
 bind-key k swap-window -t -1\; select-window -t -1
 bind-key j swap-window -t +1\; select-window -t +1
 
 
-# ----- MOUSE CONFIGURATION -----
+# ----- BEHAVIOUR CONFIGURATION -----
 set -g mouse on
-setw -g mode-keys vi
 set -s set-clipboard on
-unbind -T copy-mode-vi MouseDragEnd1Pane
+
+# ----- Vi MODE -----
+setw -g mode-keys vi
+unbind -T copy-mode-vi MouseDragEnd1Pane # don't reset scroll upon mouse drag
+bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind -T copy-mode-vi v send -X begin-selection
 
 
 # ----- THE BAR BELOW CONFIGURATION ----
