fix tmux cht.sh

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,7 +11,7 @@ bind c new-window -c "#{pane_current_path}"
 
 
 # ----- BIND FOR MOVING-WINDOW
-bind-key i run-shell "tmux neww ~/utils/cht.sh/main"
+bind-key i run-shell "tmux neww bash -c  ~/utils/cht.sh/main"
 bind-key k swap-window -t -1\; select-window -t -1
 bind-key j swap-window -t +1\; select-window -t +1
 
