--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,12 @@
+# ----- FIX VIM COLOR SCHEME IN TMUX -----
+set -g default-terminal screen-256color
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+
+
 set -g history-limit 10000
 
-# ----- prevent delay for vim `Ctrl + [` -----
+
+# ----- PREVENT DELAY FOR VIM `CTRL + [` -----
 set -sg escape-time 0
 
 
