any jump, cool plugin lol

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,6 @@
 # ----- FIX VIM COLOR SCHEME IN TMUX -----
 set -g default-terminal screen-256color
+set -sa terminal-overrides ",xterm-256color:RGB"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 
