tmux-clear-windows

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,6 +20,7 @@ bind c new-window -c "#{pane_current_path}"
 # ----- BIND FOR MOVING-WINDOW
 bind-key i run-shell "tmux neww ~/utils/cht.sh/main"
 bind-key "C-p" run-shell "tmux neww ~/utils/tmux-sessionizer"
+bind-key "C-l" run-shell "~/utils/tmux-clear-windows"
 bind-key k swap-window -t -1\; select-window -t -1
 bind-key j swap-window -t +1\; select-window -t +1
 
