--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 # ----- FIX VIM COLOR SCHEME IN TMUX -----
-set -g default-terminal screen-256color
-set -sa terminal-overrides ",xterm-256color:RGB"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "screen-256color"
+# set -sa terminal-overrides ",xterm-256color:RGB"
+# set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 
 set -g history-limit 10000
