--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,14 +7,15 @@
 # Generals
 ## enable undercurl
 # https://github.com/AstroNvim/AstroNvim/issues/1336#issuecomment-1317609457
-set -g default-terminal "xterm-256color"
-set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
-set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
+set -g default-terminal "xterm-kitty"
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.
+
 ## color correction
 # https://github.com/tmux/tmux/wiki/FAQ#how-do-i-use-rgb-colour
-set -as terminal-features ",xterm-256color*:RGB"
-set -as terminal-overrides ",xterm-256color*:Tc"
-set -as terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q' # pipe cursor in vim insert mode
+# set -as terminal-features ",xterm-256color*:RGB"
+# set -as terminal-overrides ",xterm-256color*:Tc"
+# set -as terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q' # pipe cursor in vim insert mode
 
 
 set -g history-limit 10000
