tmux color underline working. remove rest of temp

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,21 +1,8 @@
 # ----- FIX VIM COLOR SCHEME IN TMUX -----
-# set -g default-terminal screen-256color
-# set -sa terminal-overrides ",xterm-256color:RGB"
-# set-option -ga terminal-overrides ",xterm-256color:Tc"
-
-
-# Generals
-## enable undercurl
-# https://github.com/AstroNvim/AstroNvim/issues/1336#issuecomment-1317609457
+# enable undercurl https://github.com/AstroNvim/AstroNvim/issues/1336#issuecomment-1317609457
 set -g default-terminal "xterm-kitty"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.
-
-## color correction
-# https://github.com/tmux/tmux/wiki/FAQ#how-do-i-use-rgb-colour
-# set -as terminal-features ",xterm-256color*:RGB"
-# set -as terminal-overrides ",xterm-256color*:Tc"
-# set -as terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q' # pipe cursor in vim insert mode
 
 
 set -g history-limit 10000
