--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -12,5 +12,7 @@ bold_font        auto
 italic_font      auto
 bold_italic_font auto
 # font_size        11.5
-
+cursor_shape     block
 cursor           #a270ba
+
+map super+p send_text normal ~/utils/tmux-sessionizer\r
