bring back barbecue

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,6 +37,7 @@ set -s set-clipboard on
 setw -g mode-keys vi
 unbind -T copy-mode-vi MouseDragEnd1Pane # don't reset scroll upon mouse drag
 bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind-key -T copy-mode-vi "C-c" send-keys -X copy-selection
 bind -T copy-mode-vi v send -X begin-selection
 
 
