many mini plugins

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -15,4 +15,10 @@ bold_italic_font auto
 cursor_shape     block
 cursor           #a270ba
 
+clear_all_shortcuts		yes
+map ctrl+cmd+f toggle_fullscreen
+map cmd+v paste_from_clipboard
+map cmd+c copy_to_clipboard
+map ctrl+cmd+, load_config_file
+
 map super+p send_text normal ~/utils/tmux-sessionizer\r
