mapping exit kitty

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -20,5 +20,6 @@ map ctrl+cmd+f toggle_fullscreen
 map cmd+v paste_from_clipboard
 map cmd+c copy_to_clipboard
 map ctrl+cmd+, load_config_file
+map cmd+q quit
 
 map super+p send_text normal ~/utils/tmux-sessionizer\r
