oscyank remove init

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -22,4 +22,5 @@ map cmd+c copy_to_clipboard
 map ctrl+cmd+, load_config_file
 map cmd+q quit
 
+map cmd+y send_text all history | fzf\r
 map super+p send_text normal ~/utils/tmux-sessionizer\r
