tmux support incsearch

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,6 +39,8 @@ unbind -T copy-mode-vi MouseDragEnd1Pane # don't reset scroll upon mouse drag
 bind-key -T copy-mode-vi y send-keys -X copy-selection
 bind-key -T copy-mode-vi "C-c" send-keys -X copy-selection
 bind -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi / command-prompt -i -p "search down" "send -X search-forward-incremental \"%%%\""
+bind-key -T copy-mode-vi ? command-prompt -i -p "search up" "send -X search-backward-incremental \"%%%\""
 
 
 # ----- THE BAR BELOW CONFIGURATION ----
