get rid oscyank and fix copy/paste using native nvim

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,7 +31,7 @@ bind-key j swap-window -t +1\; select-window -t +1
 
 # ----- BEHAVIOUR CONFIGURATION -----
 set -g mouse on
-set -s set-clipboard on
+set -s set-clipboard external
 
 # ----- Vi MODE -----
 setw -g mode-keys vi
